Just some small code organization

--- a/app/templates/interactive_result.html
+++ b/app/templates/interactive_result.html
@@ -65,7 +65,7 @@
   // Language-specific feedback URLs
   const FEEDBACK_LINKS = {
     en: "https://forms.office.com/e/vM7W04GBxg",
-    pt: "https://forms.office.com/e/sMT70qnPpU"  // <-- your Portuguese form
+    pt: "https://forms.office.com/e/sMT70qnPpU"  // <-- Portuguese form
   };
 
   function setFeedbackHref(lang) {
